plugins/xpath/xpath-lang/testData/xpath2/parsing/ifThenElseMissing.xpath2
(if (true()) then 1<error descr="'else' expected"> </error>) + 1